force-app/main/default/objects/Lead/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <label>Dealership</label>
    <length>40</length>
    <type>Text</type>
</CustomField>