force-app/main/default/objects/Lead/fields/FamilyMemberOneAddress__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberOneAddress__c</fullName>
    <label>Family Member One Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>