force-app/main/default/objects/Lead/fields/FamilyMemberOneName__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberOneName__c</fullName>
    <label>Family Member One Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>