force-app/main/default/objects/Lead/fields/FamilyMemberTwoAddress__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberTwoAddress__c</fullName>
    <label>Family Member Two Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>