force-app/main/default/objects/Lead/fields/FamilyMemberTwoName__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberTwoName__c</fullName>
    <label>Family Member Two Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>