force-app/main/default/objects/Lead/fields/FamilyMemberTwoRelationship__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberTwoRelationship__c</fullName>
    <label>Family  MemberTwo Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Grand Father</fullName>
            </value>
            <value>
                <fullName>Grand Mother</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>