force-app/main/default/objects/Lead/fields/FinancialInstitution__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstitution__c</fullName>
    <description>Financial Institution name</description>
    <label>Financial Institution</label>
    <length>40</length>
    <type>Text</type>
</CustomField>