force-app/main/default/objects/Lead/fields/IdentityType__c.field-meta.xml
<CustomField>
    <fullName>IdentityType__c</fullName>
    <label>Identity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Military Id</fullName>
            </value>
            <value>
                <fullName>State Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>