force-app/main/default/objects/Lead/fields/LinkExpireTime__c.field-meta.xml
<CustomField>
    <fullName>LinkExpireTime__c</fullName>
    <description>Lead link expire time</description>
    <inlineHelpText>Lead link expire time</inlineHelpText>
    <label>Link Expire Time</label>
    <type>DateTime</type>
</CustomField>