force-app/main/default/objects/Lead/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <description>OTP to be received by the dealer on registration</description>
    <label>OTP</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>