force-app/main/default/objects/Lead/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <description>Lead routing number</description>
    <inlineHelpText>Lead routing number</inlineHelpText>
    <label>Routing Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>